# weaviate-pydantic-ai-workshop

./: .env.example  .gitignore  README.md  bonus_weaviate_mcp_demo.py  preprocess_1_img_to_embeddings_cohere.py  preprocess_2_pdf_to_img.py  preprocess_3_import_data.py  pyproject.toml  requirements.txt  setup_check.py  step1_llm_call-completed.ipynb  step1_llm_call.ipynb  step1_llm_call.py  step2_basic_agent-completed.ipynb  step2_basic_agent.ipynb  step2_basic_agent.py  step3_tool_choice-completed.ipynb  step3_tool_choice.ipynb  step3_tool_choice.py  step4_weaviate_demo.py  step4_weaviate_tools-complete.py  step4_weaviate_tools.py  step5_final_chatbot.py  step5_weaviate_tools.py  step6_final_chatbot.py  tools.py
.devcontainer/: devcontainer.json  setup.sh
data/embeddings/: embeddings_metadata.json  image_embeddings.npy
dev/: step1_llm_call.py
