[project]
name = "weaviate-pydantic-ai-workshop"
version = "0.1.0"
description = "Workshop on building agentic applications with Weaviate and Pydantic AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=1.0.15",
    "python-dotenv>=1.0.0",
    "weaviate-agents>=1.0.1",
    "weaviate-client>=4.17.0",
]
